--- a/angular.json
+++ b/angular.json
@@ -20,7 +20,8 @@
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              { "glob": "**/*", "input": "src/assets/images/movie-covers", "output": "/assets/" }
             ],
             "styles": [
               "src/styles.scss"
