Update config for heroku test

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
-    "build:aot": "ng build --aot",
+    "build": "ng build --aot --base-href /dist/",
+    "build:aot": "ng build --aot ",
     "test": "ng test",
     "test:sm": "ng test --sourceMap=true",
     "lint": "ng lint",
