--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "build:aot": "ng build --aot --base-href /dist/ng6-movies/",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
+    "build:aot": "ng build --aot",
     "test": "ng test",
     "test:sm": "ng test --sourceMap=true",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --aot -prod"
   },
   "private": true,
   "dependencies": {
@@ -25,7 +26,9 @@
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
     "core-js": "^2.5.4",
+    "express": "^4.16.4",
     "karma-mocha-reporter": "^2.2.5",
+    "path": "^0.12.7",
     "rxjs": "~6.2.0",
     "tslib": "^1.9.3",
     "zone.js": "~0.8.26"
@@ -39,6 +42,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.3.0",
+    "enhanced-resolve": "^3.3.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.0.0",
