--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "karma-mocha-reporter": "^2.2.5",
     "path": "^0.12.7",
     "rxjs": "~6.2.0",
+    "sass": "^1.62.0",
     "tslib": "^1.9.3",
     "zone.js": "~0.8.26"
   },
